--- a/src/Components/Book.scss
+++ b/src/Components/Book.scss
@@ -4,7 +4,7 @@
     height: 250px;
     padding: 12px;
 
-    &__fake-img{
+    &__img{
         background-color: skyblue;
         width: 100%;
         height: 50%;
