--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,8 +1,17 @@
-Header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: solid red;
+Header {
     height: 20vh;
     background-color: rgb(201, 143, 95);
+
+    .flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .banner {
+        background-color: green;
+        width: 100%;
+        height: 20px;
+    }
 }
